--- a/notebooks/EDAPredictiveMaintenanceDataset2.Rmd
+++ b/notebooks/EDAPredictiveMaintenanceDataset2.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "EDAPredictiveMaintenanceDataset2"
+title: "EDA Predictive Maintenance Dataset2"
 knit: (function(input_file, encoding) {
   out_dir <- '../docs';
   rmarkdown::render(input_file,
  encoding=encoding,
- output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
+ output_file=file.path(dirname(input_file), out_dir, 'EDAPredictiveMaintenanceDataset2.html'))})
 author: "Sridhar Kothalanka"
 date: "2/20/2020"
 output: html_document
