--- a/notebooks/EDAPredictiveMaintenanceDataset2.Rmd
+++ b/notebooks/EDAPredictiveMaintenanceDataset2.Rmd
@@ -4,7 +4,7 @@ knit: (function(input_file, encoding) {
   out_dir <- '../docs';
   rmarkdown::render(input_file,
  encoding=encoding,
- output_file=file.path(dirname(input_file), out_dir, 'EDAPredictiveMaintenancedataset2.html'))})
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Sridhar Kothalanka"
 date: "2/20/2020"
 output: html_document
