--- a/notebooks/EDAPredictiveMaintenanceDataset2.Rmd
+++ b/notebooks/EDAPredictiveMaintenanceDataset2.Rmd
@@ -4,7 +4,7 @@ knit: (function(input_file, encoding) {
   out_dir <- '../docs';
   rmarkdown::render(input_file,
  encoding=encoding,
- output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
+ output_file=file.path(dirname(input_file), out_dir, 'EDAPredictiveMaintenancedataset2.html'))})
 author: "Sridhar Kothalanka"
 date: "2/20/2020"
 output: html_document
@@ -16,3 +16,21 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Overview
 In the below exercise EDA is performed on a predictive maintenance data set to understand the data "hello"
+
+
+### 1. Load the necessary R libraries
+```{r results="hide", message=FALSE, warning=FALSE, error=FALSE}
+library(ggplot2)
+library(magrittr)
+library(dplyr)
+library(tidyr)
+```
+
+### 2. Load the average utilization summary data
+
+The raw data sets consists of observations of two stations across 3 shifts and its utilization over a period of 1 year. The raw data was processed and features like "day of the week" was added to get a quick understanding of any plant behavior patterns.
+
+```{r tidy=TRUE}
+df1 <- read.csv("../data/eda-pm-ds1/station1n2-avgUtilization.csv")
+names(df1)[2]<-"avgUtilization"
+```
