--- a/notebooks/EDAPredictiveMaintenanceDataset1.Rmd
+++ b/notebooks/EDAPredictiveMaintenanceDataset1.Rmd
@@ -4,7 +4,7 @@ knit: (function(input_file, encoding) {
   out_dir <- '../docs';
   rmarkdown::render(input_file,
  encoding=encoding,
- output_file=file.path(dirname(input_file), out_dir, 'PlantMachineUtilizationAnalysisV3.html'))})
+ output_file=file.path(dirname(input_file), out_dir, 'PlantMachineUtilizationAnalysis.html'))})
 author: "Sridhar Kothalanka"
 date: "2/21/2020"
 output: html_document
@@ -182,7 +182,7 @@ df4 %>%
 
 ### 11. Summary
 
-1. The dataset is limited in terms of the available features (only provides how the machines are utilized)
+1. The dataset is limited in terms of the available features (only provides information on how the machines are utilized)
 2. If the data set can include the raw data used to compute utilization that may help broaden the analysis
 3. Additional data (metrics) points associated with the machines itself will help to build predictive maintenance models
 
